[package]
name = "lrad"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
description = "An update framework for applications running on hobbyist single-board-computers (CS5285 Final Project)"
homepage = "https://github.com/sameer/lrad"
repository = "https://github.com/sameer/lrad"
license = "MIT"

[dependencies]
