[package]
name = "lrad"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
description = "An update framework for applications running on hobbyist single-board-computers (CS5285 Final Project)"
homepage = "https://github.com/sameer/lrad"
repository = "https://github.com/sameer/lrad"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "**/*.toml",
]

[badges]
travis-ci = { repository = "https://github.com/sameer/lrad", branch = "master" }
is-it-maintained-issue-resolution = { repository = "https://github.com/sameer/lrad" }
is-it-maintained-open-issues = { repository = "https://github.com/sameer/lrad" }
maintenance = { status = "passively-maintained" }

[dependencies]
openssl = "0.10"
serde = "1.0"
serde_derive = "1.0"
tarpc = { version = "0.14", features = ["serde1"] }
bit-vec = {git = "https://github.com/sameer/bit-vec", version = "0.5", features = ["serde", "serde_derive"]}
trust-dns-resolver = { version = "0.10", features = ["dns-over-openssl"] }
futures-preview = { version = "0.3.0-alpha.9", features = ["compat", "tokio-compat"] }
tokio-executor = "0.1"
tarpc-bincode-transport = "0.3"
trust-dns-proto = "0.5"
tokio = "0.1 "
mdns = "0.3"
