cargo-features = ["default-run"]

[package]
name = "lrad-cli"
version = "0.1.0"
authors = ["Sameer purisame@spuri.io"]
edition = "2018"
default-run = "lrad-cli"

[dependencies]
lrad = { version = "0.1", path = "../lrad-lib" }
clap = "2.32"
log = "0.4"
env_logger = "0.6"
dotenv = "0.13"
futures = "0.1"
